sxc/10.1/k8s-commerce-xc1/ingress-nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  rules:
  - host: cd.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: cd
          servicePort: 80
  - host: cm.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: cm
          servicePort: 80
  - host: id.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: id
          servicePort: 80
  - host: bizfx.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: bizfx
          servicePort: 80
  - host: authoring.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: engine-authoring
          servicePort: 5000
  - host: minions.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: engine-minions
          servicePort: 5000
  - host: ops.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: engine-ops
          servicePort: 5000
  - host: shops.globalhost
    http:
      paths:
      - path: /
        backend:
          serviceName: engine-shops
          servicePort: 5000
  tls:
  - secretName: global-cd-tls
    hosts:
    - cd.globalhost
  - secretName: global-cm-tls
    hosts:
    - cm.globalhost
  - secretName: global-id-tls
    hosts:
    - id.globalhost
  - secretName: global-bizfx-tls
    hosts:
    - bizfx.globalhost
  - secretName: global-authoring-tls
    hosts:
    - authoring.globalhost
  - secretName: global-minions-tls
    hosts:
    - minions.globalhost
  - secretName: global-ops-tls
    hosts:
    - ops.globalhost
  - secretName: global-shops-tls
    hosts:
    - shops.globalhost
